--- a/css/var.css
+++ b/css/var.css
@@ -14,7 +14,7 @@
 	/*--clr-orange-gradient: background: radial-gradient(106.03% 136.67% at 50% 0%, #FFC400 0%, #FF9900 100%);
 	box-shadow: inset 0px 0px 12px rgba(255, 255, 255, 0.5);
 	border-radius: 60px;*/
-	--clr-black: ##303030;
+	--clr-black: #303030;
 	/*--clr-orange:background: radial-gradient(106.03% 136.67% at 50% 0%, #FFC400 0%, #FF9900 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
