--- a/css/header.css
+++ b/css/header.css
@@ -8,14 +8,19 @@
 
 .header-grid {
 	display: grid;
-	gap: 1.2rem;
+	gap: 3rem;
 	grid-auto-flow: column;
-	grid-auto-columns: 6.25rem repeat(6, auto);
+	grid-auto-columns: repeat(7, auto);
 	grid-auto-rows: 1fr;
 	align-items: center;
 }
 
-.header__logo {}
+.header__logo {
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+}
+
 
 .header__location {}
 
@@ -33,7 +38,7 @@
 	font-weight: var(--fw-regular);
 	font-size: 1rem;
 	line-height: 155%;
-	color: var(--clr-text-gray);
+	color: var(--clr-black);
 }
 
 .header__price-list {
@@ -48,6 +53,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.header__price-list-circle:hover {
+	filter: brightness(0.9);
 }
 
 .header__price-list-circle span {
@@ -68,6 +77,9 @@
 	font-size: 1rem;
 	line-height: 130%;
 	letter-spacing: 0.04em;
+	cursor: pointer;
+	padding: 0.4rem 0;
+	color: var(--clr-black);
 }
 
 .header__catalog {
@@ -75,7 +87,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 0 0.5rem;
+}
 
+.header__catalog:hover {
+	filter: brightness(0.9);
 }
 
 .header__catalog span {
@@ -95,16 +111,21 @@
 }
 
 .header__question-text {
-	font-family: var(--ff-Montserrat);
+	font-family: var(--ff-Gilroy);
 	font-weight: var(--fw-regular);
-	font-size: 0.875rem;
+	font-size: 1rem;
 	line-height: 150%;
 	/* 21/14 */
+	text-align: center;
+	color: var(--clr-text-gray);
 }
 
 .header__question-text::before {
 	display: inline-block;
 	content: "";
+	position: relative;
+	bottom: 1.5px;
+	right: 2px;
 	width: 6px;
 	height: 6px;
 	background-color: var(--clr-green);
@@ -113,12 +134,127 @@
 
 .header__question-row {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	gap: 1rem;
 }
 
-.header__question-row span {
+.header__question-row a {
 	width: 50px;
 	height: 41px;
 }
 
-.header__tel {}
+
+.header__tel {
+	font-family: var(--ff-Gilroy);
+	font-weight: var(--fw-medium);
+	font-size: 1.75rem;
+	line-height: 150%;
+}
+
+.header__tel p {
+	font-family: var(--ff-Gilroy);
+	font-weight: var(--fw-medium);
+	font-size: 1.125rem;
+	line-height: 150%;
+	text-align: center;
+	text-decoration-line: underline;
+	text-decoration-style: solid;
+	text-decoration-color: var(--clr-text-gray);
+	color: var(--clr-black);
+	letter-spacing: 0.02em;
+}
+
+.d-none {
+	display: none;
+}
+
+
+@media (max-width: 93.75em) {
+	.header-grid {
+		gap: 1rem;
+	}
+
+	.header__price-list {
+		gap: 1rem;
+	}
+
+	.header__price-list-text {
+		font-size: 0.9rem;
+	}
+
+	.header__catalog span {
+		font-size: 0.9rem;
+	}
+
+	.header__tel {
+		font-size: 1.4rem;
+	}
+
+	.header__tel p {
+		text-align: start;
+	}
+}
+
+@media (max-width: 81.25em) {
+	.header-grid {
+		display: grid;
+		gap: 2rem;
+		grid-auto-flow: column;
+		grid-auto-columns: auto;
+		grid-auto-rows: 1fr;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.header__logo {
+		display: block;
+	}
+
+	.header__vertical-span {
+		display: none;
+	}
+
+	.header__location {
+		display: none;
+	}
+
+	.header__price-list {}
+
+	.header__catalog {}
+
+	.header__question {
+		display: none;
+	}
+
+	.header__question {
+		display: none;
+	}
+
+	.header__tel p {
+		text-align: end;
+		font-size: 0.9rem;
+		margin-bottom: 0.35rem;
+	}
+
+	.header__tel {
+		display: grid;
+		font-size: 1.2rem;
+		justify-items: center;
+	}
+
+	.d-none {
+		display: block;
+	}
+}
+
+@media (max-width: 56.25em) {
+	.header__price-list {
+		display: none;
+	}
+}
+
+@media (max-width: 37.5em) {
+	.header__catalog {
+		display: none;
+	}
+}
