--- a/css/common.css
+++ b/css/common.css
@@ -43,6 +43,7 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+  font-weight: var(--fw-medium);
 }
 
 .orange-gradient {
