--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,19 @@
 @import url("footer.css");
 
 /*main-sale.css*/
-@import url("sections/main-sale.css")
-/**/
-/**/
-/**/
+@import url("sections/main-sale.css");
+
+/*business.css*/
+@import url("sections/business.css");
+
+/*catalog.css*/
+@import url("sections/catalog.css");
+
+/*clients.css*/
+@import url("sections/clients.css");
+
+/*questions.css*/
+@import url("sections/questions.css");
+
+/*roofing-cost.css*/
+@import url("sections/roofing-cost.css");
