--- a/css/common.css
+++ b/css/common.css
@@ -60,6 +60,10 @@ body {
   border-radius: 60px;
 }
 
+.orange-gradient:hover {
+  filter: brightness(0.9);
+}
+
 .text-gray-gradient {
   display: block;
   background: linear-gradient(269.73deg, #4B4A53 9.23%, #808086 54.08%, #4B4A53 99.88%);
@@ -74,6 +78,10 @@ body {
   border-radius: 60px;
 }
 
+.gray-gradient:hover {
+  filter: brightness(0.9);
+}
+
 .title {
   font-family: var(--ff-Gilroy);
   font-weight: var(--fv-medium);
@@ -84,6 +92,25 @@ body {
   color: var(--clr-black);
 }
 
+.animation-vetsion-1 {
+  transform: translate(0px, 120%);
+  opacity: 0;
+  transition: all 0.8s ease 0.1s;
+}
+
+.animation-vetsion-1._active {
+  transform: translate(0px, 0px);
+  opacity: 1;
+}
+
+.animation-version-2 {
+  transform: scale(0);
+  transition: all 0.8s ease 0.1s;
+}
+
+.animation-version-2._active {
+  transform: scale(1);
+}
 
 /* 1151.98px */
 @media (max-width: 71.99875em) {
