--- a/css/sections/business.css
+++ b/css/sections/business.css
@@ -20,6 +20,15 @@
 	/* or 87px */
 	text-transform: uppercase;
 	flex: 1 1 68%;
+
+	transform: translate(0px, 120%);
+	opacity: 0;
+	transition: all 0.8s ease 0.1s;
+}
+
+.business__title.-active {
+	transform: translate(0px, 0px);
+	opacity: 1;
 }
 
 .business__text {
