--- a/css/sections/catalog.css
+++ b/css/sections/catalog.css
@@ -5,6 +5,15 @@
 	line-height: 100%;
 	text-transform: uppercase;
 	margin-bottom: 3rem;
+
+	transform: translate(0px, 120%);
+	opacity: 0;
+	transition: all 0.8s ease 0.1s;
+}
+
+.catalog__title.-active {
+	transform: translate(0px, 0px);
+	opacity: 1;
 }
 
 .catalog__row-buttons {
