--- a/css/sections/clients.css
+++ b/css/sections/clients.css
@@ -10,6 +10,15 @@
 	line-height: 130%;
 	text-transform: uppercase;
 	margin-bottom: 4rem;
+
+	transform: translate(0px, 120%);
+	opacity: 0;
+	transition: all 0.8s ease 0.1s;
+}
+
+.clients__title.-active {
+	transform: translate(0px, 0px);
+	opacity: 1;
 }
 
 .clients__button {
