--- a/css/sections/main-sale.css
+++ b/css/sections/main-sale.css
@@ -22,6 +22,16 @@
 	text-transform: uppercase;
 	color: var(--clr-black);
 	margin-bottom: 2.8125rem;
+
+	/* - */
+	transform: translate(0px, 120%);
+	opacity: 0;
+	transition: all 0.8s ease 0s;
+}
+
+.main-sale__title.-active {
+	transform: translate(0px, 0px);
+	opacity: 1;
 }
 
 .main-sale__color-orange span .main-sale__color-black {
@@ -37,6 +47,15 @@
 	/* or 29px */
 	color: #000000;
 	margin-bottom: 45px;
+	/* - */
+	transform: translate(0px, 120%);
+	opacity: 0;
+	transition: all 0.8s ease 0.4s;
+}
+
+.main-sale__sub-title.-active {
+	transform: translate(0px, 0px);
+	opacity: 1;
 }
 
 .main-sale__button {
@@ -46,6 +65,13 @@
 	height: 5.9375rem;
 	max-width: 28.8125rem;
 	margin-bottom: 40px;
+	/* - */
+	transform: scale(0);
+	transition: all 0.8s ease 0.6s;
+}
+
+.main-sale__button.-active {
+	transform: scale(1);
 }
 
 .main-sale__button span {
