--- a/css/sections/roofing-cost.css
+++ b/css/sections/roofing-cost.css
@@ -16,6 +16,17 @@
 	text-transform: uppercase;
 	color: var(--clr-text-gray);
 	margin-bottom: 6.25rem;
+
+	transform: translate(100%, 0px);
+	transform: rotate(90deg);
+	opacity: 0;
+	transition: all 0.8s ease 0.1s;
+}
+
+.roofing-cost__title.-active {
+	transform: translate(0%, 0px);
+	transform: rotate(0);
+	opacity: 1;
 }
 
 .roofing-cost__block-grid {
@@ -59,6 +70,7 @@
 	width: 15%;
 	height: 28px;
 }
+
 
 .roofing-grid__loading span {
 	position: relative;
