--- a/css/sections/roofing-cost.css
+++ b/css/sections/roofing-cost.css
@@ -17,15 +17,13 @@
 	color: var(--clr-text-gray);
 	margin-bottom: 6.25rem;
 
-	transform: translate(100%, 0px);
-	transform: rotate(90deg);
+	transform: translate(0px, 120%);
 	opacity: 0;
 	transition: all 0.8s ease 0.1s;
 }
 
 .roofing-cost__title.-active {
-	transform: translate(0%, 0px);
-	transform: rotate(0);
+	transform: translate(0px, 0px);
 	opacity: 1;
 }
 
